--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,10 @@
   <div id="header">
     <nav>
       <ul>
-        <li class="fork"><a href="{{site.baseurl}}/frontend">Home</a></li>
-        <li class="fork"><a href="{{site.baseurl}}/frontend/compsci">Tracker</a></li>
-        <li class="fork"><a href="{{site.baseurl}}/frontend/blogs">Graphs</a></li>
-        <li class="title"><a href="{{site.baseurl}}/frontend/help">Helps</a></li>
+        <li class="fork"><a href="{{site.baseurl}}">Home</a></li>
+        <li class="fork"><a href="{{site.baseurl}}/compsci">Tracker</a></li>
+        <li class="fork"><a href="{{site.baseurl}}/blogs">Graphs</a></li>
+        <li class="title"><a href="{{site.baseurl}}/help">Helps</a></li>
         <li class="title"><a href="{{ site.github.repository_url }}#readme">View On GitHub</a></li>
       </ul>
     </nav>
