--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,11 +1,14 @@
 ---
 ---
+//
 
 @import "{{ site.theme }}";
 
-// STYLING PREFERNCES for SITE
+//STYLING PREFERNCES for SITE
 // mixin used as a template for buttons
-  @mixin button {
+
+
+@mixin button {
     width: auto;
     height: auto;
     border-radius: 10px;
