--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <style>
   /* Add a style block for custom CSS */
   header.site-header {
-    background-color: #333; /* Change the background color */
+    background-color: #add8e6; /* Change the background color */
     padding: 10px; /* Add padding to the header */
   }
 
