--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <style>
   /* Add a style block for custom CSS */
   header.site-header {
-    background-color: #add8e6; /* Change the background color */
+    background-color: #fff; /* Change the background color */
     padding: 10px; /* Add padding to the header */
   }
 
@@ -18,7 +18,7 @@
 
   nav ul li a {
     text-decoration: none; /* Remove underline from links */
-    color: white; /* Change the text color */
+    color: black; /* Change the text color */
     padding: 8px 12px; /* Add padding to menu items */
     border-radius: 5px; /* Add rounded corners to menu items */
     transition: background-color 0.3s; /* Smooth transition for hover effect */
