--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
   }
 
   nav ul li a:hover {
-    background-color: #555; /* Change background color on hover */
+    background-color: #d242ac; /* Change background color on hover */
   }
 </style>
 
