hover color change

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,8 @@
   }
 
   nav ul li a:hover {
-    background-color: #d242ac; /* Change background color on hover */
+    background-color: #e788ce; /* Change background color on hover */
+    color: #fff; /* Change text color on hover */
   }
 </style>
 
