--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
         <li class="fork"><a href="{{site.baseurl}}">Home</a></li>
         <li class="fork"><a href="{{site.baseurl}}/tracker">Tracker</a></li>
         <li class="fork"><a href="{{site.baseurl}}/graphs">Graphs</a></li>
-        <li class="fork"><a href="{{site.baseurl}}/blogs">Meet the Team</a></li>
+        <li class="fork"><a href="{{site.baseurl}}/meettheteam">Meet the Team</a></li>
       </ul>
     </nav>
   </div><!-- end header -->
