--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,9 @@
   header.site-header {
     background-color: #fff; /* Change the background color */
     padding: 10px; /* Add padding to the header */
+    border: 8px solid pink;
   }
-
+ 
   nav ul {
     list-style-type: none; /* Remove default list styles */
     margin: 0; /* Remove default margin */
