--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,10 +38,9 @@
       <ul>
         <li class="fork"><a href="{{site.baseurl}}">Home</a></li>
         <li class="fork"><a href="{{site.baseurl}}/tracker">Create User</a></li>
-        <li class="fork"><a href="{{site.baseurl}}/trackersave">Tracker</a></li>
+        <li class="fork"><a href="{{site.baseurl}}/trackertry">Tracker</a></li>
         <li class="fork"><a href="{{site.baseurl}}/graphs">Graphs</a></li>
-        <li class="fork"><a href="{{site.baseurl}}/blogs">Blogs</a></li>
-        <li class="title"><a href="{{site.baseurl}}/help">Helps</a></li>
+        <li class="fork"><a href="{{site.baseurl}}/meettheteam">Meet The Team</a></li>
         <li class="title"><a href="{{ site.github.repository_url }}#readme">View On GitHub</a></li>
       </ul>
     </nav>
